XMLExper/m12/m12_301_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::LastChildElement(const char*) const’:
tinyxml2.cpp:1051:91: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 1051 |     for( const XMLNode* node = _lastChild; /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node); node = node->_prev ) {
      |                                                                                           ^
diff: tinyxml2.S: No such file or directory
